--- a/server/views/index.html
+++ b/server/views/index.html
@@ -1,1 +1,15 @@
-<h1>mern</h1>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>mern for fun</title>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script src="/script/helloWorld.js" type="text/babel"></script>
+	</body>
+</html>
